--- a/css/style.less
+++ b/css/style.less
@@ -1,13 +1,13 @@
 div{
 	// border:1px solid red;
-	margin:auto;
+	
 }
 body{
 	font-family: "Open Sans", sans-serif;
 	color: #1c448d;
 }
 button{
-	padding: 5px;
+	padding: 1em;
 	border-radius: 2px;
 	background: rgb(28, 68, 141);
 	color: #fff;
@@ -19,6 +19,21 @@ button{
 }
 button:hover{
 	background:rgba(28, 68, 141, 0.8);
+}
+input{
+	width:100%;
+}
+textarea{
+	text-align: left;
+}
+.content-main{
+	width:100%;
+	display:flex;
+	justify-content:space-around;
+	flex-wrap: wrap;
+}
+.row,.container{
+	margin-bottom: 1em;
 }
 .wrapper-popup{
 	position: absolute;
@@ -32,19 +47,30 @@ button:hover{
 .popup{
 	background:white;
 	border-radius: 2px;
+	margin:auto;
 }
 .close-popup,.submit-popup{
 	display: flex;
 	justify-content: flex-end;
 	margin-bottom: 1em;
-	button{
-		background-color: red;
-		width: 30px;
-		height: 30px;
-	}
+	button{background-color: red;}
 }
 .submit-popup{
 	margin:1em;
 	justify-content: space-around;
 	button{background-color: green}
+}
+.warning{
+	color:red;
+}
+.content-item{
+	margin-top: 1em;
+	cursor:pointer;
+	border-radius: 3px;
+	border:1px solid rgb(28, 68, 141);
+	text-align:center;
+	img{height:100px;}
+}
+.content-item:hover{
+	box-shadow: 0px 0px 10px 0px #000000;
 }
