--- a/css/style.less
+++ b/css/style.less
@@ -21,7 +21,7 @@ button:hover{
 	background:rgba(28, 68, 141, 0.8);
 }
 input{
-	width:100%;
+	min-width: 30vw;
 }
 textarea{
 	text-align: left;
@@ -36,7 +36,7 @@ textarea{
 	margin-bottom: 1em;
 }
 .wrapper-popup{
-	position: absolute;
+	position: fixed;
 	top:0;
 	left:0;
 	height: 100vh;
@@ -73,4 +73,7 @@ textarea{
 }
 .content-item:hover{
 	box-shadow: 0px 0px 10px 0px #000000;
+}
+.navigation{
+	cursor:pointer;
 }
