--- a/css/style.less
+++ b/css/style.less
@@ -32,9 +32,9 @@ textarea{
 	justify-content:space-around;
 	flex-wrap: wrap;
 }
-.row,.container{
-	margin-bottom: 1em;
-}
+// .row,.container{
+// 	margin-bottom: 1em;
+// }
 .wrapper-popup{
 	position: fixed;
 	top:0;
