--- a/css/style.less
+++ b/css/style.less
@@ -31,6 +31,7 @@ textarea{
 	display:flex;
 	justify-content:space-around;
 	flex-wrap: wrap;
+	margin-bottom:100px;
 }
 // .row,.container{
 // 	margin-bottom: 1em;
@@ -76,4 +77,14 @@ textarea{
 }
 .navigation{
 	cursor:pointer;
+}
+.catalog-decoration{
+	margin-bottom:1em;
+	margin-top: 1em;
+}
+.catalog-image,.catalog-discribe{
+	display:flex;
+}
+.decoration{
+	margin:auto;
 }
